Responsive arreglado vista admin/census-config

--- a/avAdmin/admin-directives/extra-field/extra-field.html
+++ b/avAdmin/admin-directives/extra-field/extra-field.html
@@ -303,6 +303,9 @@
       </span>
     </div>
   </div>
+  <div class="hidden-sm hidden-md hidden-lg">
+      <br/>
+  </div>
   <div class="row">
     <div ng-switch="field.type">
       <div avr-email-field ng-switch-when="email"></div>
