--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -8,8 +8,7 @@
 
     <!-- dashboard status bar -->
     <div class="statusbar row text-center">
-        <div class="hidden-xs">
-            <div class="col-xs-2" ng-class="{true:'text-success', false:'text-muted'}[index > $index]" ng-repeat="status in statuses">
+            <div class="status-responsive" ng-class="{true:'text-success', false:'text-muted'}[index > $index]" ng-repeat="status in statuses">
                 <div class="stick" ng-class="{'stickini': $first, 'stickend': $last}">
                     <i class="fa fa-cog fa-spin fa-sw fa-2x text-warning" ng-if="index == $index && intally"></i>
                     <i class="fa fa-sw fa-2x fa-check-circle" ng-if="index > $index"></i>
@@ -25,25 +24,6 @@
                     <div class="small" ng-i18next="avAdmin.dashboard.doingtally"></div>
                 </button>
             </div>
-        </div>
-        <div class="hidden-sm hidden-md hidden-lg" >
-            <div class="row" ng-class="{true:'text-success', false:'text-muted'}[index > $index]" ng-repeat="status in statuses">
-                <div ng-class="{'stickini': $first, 'stickend': $last}">
-                    <i class="fa fa-cog fa-spin fa-sw fa-2x text-warning" ng-if="index == $index && intally"></i>
-                    <i class="fa fa-sw fa-2x fa-check-circle" ng-if="index > $index"></i>
-                    <i class="fa fa-sw fa-2x fa-circle" ng-if="index == $index && !intally"></i>
-                    <i class="fa fa-sw fa-2x fa-circle" ng-if="index < $index"></i>
-                </div>
-                <div class="small" ng-i18next ng-if="index != $index">{{ status }}</div>
-                <button ng-click="doActionConfirm($index)" class="actionbtn btn btn-success" ng-if="index == $index && nextaction">
-                    <div class="small" ng-i18next>{{ nextaction }}</div>
-                    <strong ng-i18next>avAdmin.dashboard.donow</strong>
-                </button>
-                <button class="btn btn-warning" ng-if="index == $index && intally">
-                    <div class="small" ng-i18next="avAdmin.dashboard.doingtally"></div>
-                </button>
-            </div>
-        </div>
     </div>
     <!-- endof dashboard status bar -->
 
