--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -15,45 +15,88 @@
       class="header-block"
       av-affix-top-offset="50"
       affix-placeholder=".affix-placeholder">
-      <span
-        class="glyphicon glyphicon-chevron-right"
-        aria-hidden="true">
-      </span>
-      <span ng-i18next>avAdmin.census.manage</span>
-      <button class="btn btn-default" ng-click="reloadCensus()"><i class="fa fa-refresh"></i></button>
+      <div class="hidden-xs">
+        <span
+          class="glyphicon glyphicon-chevron-right"
+          aria-hidden="true">
+        </span>
+        <span ng-i18next>avAdmin.census.manage</span>
+        <button class="btn btn-default" ng-click="reloadCensus()"><i class="fa fa-refresh"></i></button>
+        <div class="btn-group pull-right">
+          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+            <span ng-i18next>avAdmin.census.actionsDropdown</span>
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li
+              ng-repeat="command in commands"
+              ng-class="{'disabled': !command.enableFunc()}">
+              <a ng-click="command.actionFunc()">
+                <i class="{{command.iconClass}}"></i>
+                <span ng-i18next>
+                  [i18next]({num: numSelected(shown())})avAdmin.census.{{command.i18nString}}
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="btn-group pull-right">
-        <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-          <span ng-i18next>avAdmin.census.actionsDropdown</span>
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-          <li
-            ng-repeat="command in commands"
-            ng-class="{'disabled': !command.enableFunc()}">
-            <a ng-click="command.actionFunc()">
-              <i class="{{command.iconClass}}"></i>
-              <span ng-i18next>
-                [i18next]({num: numSelected(shown())})avAdmin.census.{{command.i18nString}}
-              </span>
-            </a>
-          </li>
-        </ul>
+        <div class="input-group search pull-right col-xs-3">
+          <input
+            type="text"
+            class="form-control"
+            ng-model="filterStr"
+            placeholder="{{'avAdmin.elections.filter' | i18next}}">
+          <span class="input-group-btn">
+            <button
+              class="btn btn-default"
+              type="button">
+              <i class="fa fa-search"></i>
+            </button>
+          </span>
+        </div>
       </div>
 
-      <div class="input-group search pull-right col-xs-3">
-        <input
-          type="text"
-          class="form-control"
-          ng-model="filterStr"
-          placeholder="{{'avAdmin.elections.filter' | i18next}}">
-        <span class="input-group-btn">
-          <button
-            class="btn btn-default"
-            type="button">
-            <i class="fa fa-search"></i>
-          </button>
+      <div class="hidden-sm hidden-md hidden-lg">
+         <span
+           class="glyphicon glyphicon-chevron-right"
+           aria-hidden="true">
         </span>
+        <span ng-i18next>avAdmin.census.manage</span>
+        <button class="btn btn-default" ng-click="reloadCensus()"><i class="fa fa-refresh"></i></button>
+        <div class="btn-group pull-left">
+          <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+            <span ng-i18next>avAdmin.census.actionsDropdown</span>
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li
+              ng-repeat="command in commands"
+              ng-class="{'disabled': !command.enableFunc()}">
+              <a ng-click="command.actionFunc()">
+                <i class="{{command.iconClass}}"></i>
+                <span ng-i18next>
+                  [i18next]({num: numSelected(shown())})avAdmin.census.{{command.i18nString}}
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="input-group search pull-left col-xs-3">
+          <input
+            type="text"
+            class="form-control"
+            style="width:200px"
+            ng-model="filterStr"
+            placeholder="{{'avAdmin.elections.filter' | i18next}}">
+          <span class="input-group-btn">
+            <button
+              class="btn btn-default"
+              type="button">
+              <i class="fa fa-search"></i>
+            </button>
+          </span>
+        </div>
       </div>
     </h4>
     <table
