Acabada mejora responsive botones vista admin/census-data

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -13,11 +13,11 @@
     <div class="affix-placeholder"></div>
     
     <div>
-    <h4
+    <div class="hidden-xs">
+      <h4
       class="header-block"
       av-affix-top-offset="50"
       affix-placeholder=".affix-placeholder">
-      <div class="hidden-xs">
         <span
           class="glyphicon glyphicon-chevron-right"
           aria-hidden="true">
@@ -57,9 +57,14 @@
             </button>
           </span>
         </div>
-      </div>
+      </h4>
+    </div>
 
-      <div class="hidden-sm hidden-md hidden-lg">
+    <div class="hidden-sm hidden-md hidden-lg">
+      <h4
+      class="header-block-responsive"
+      av-affix-top-offset="50"
+      affix-placeholder=".affix-placeholder">
          <span
            class="glyphicon glyphicon-chevron-right"
            aria-hidden="true">
@@ -99,8 +104,8 @@
             </button>
           </span>
         </div>
-      </div>
-    </h4>
+      </h4>
+    </div>
     </div>
     
     <div class="hidden-sm hidden-md hidden-lg">
