--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <base href="/">
     <meta charset="utf-8" />
     <link href="/themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
+    <link href="bower_components/angular-nvd3/nvd3/build/nv.d3.min.css" type="text/css" rel="stylesheet"/>
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
@@ -18,6 +19,9 @@
   <script src="bower_components/avCommon/dist/libnocompat-v3.0.1.js" class="libnocompat"></script>
   <script src="bower_components/avCommon/dist/libCommon-v3.0.1.js" class="lib"></script>
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.js" class="lib"></script>
+  <script src="bower_components/d3/d3.min.js" class="lib"></script>
+  <script src="bower_components/nvd3/build/nv.d3.min.js" class="lib"></script>
+  <script src="bower_components/angular-nvd3/dist/angular-nvd3.min.js" class="lib"></script>
 
   <script src="vendor/angular-date-picker-polyfill/angular-date-picker-polyfill.js" class="lib"></script>
   <script src="vendor/jquery.nanoscroller/nanoscroller.js" class="lib"></script>
