fixed errors with graphics css in admin dashboard

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <base href="/">
     <meta charset="utf-8" />
     <link href="/themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
-    <link href="bower_components/angular-nvd3/nvd3/build/nv.d3.min.css" type="text/css" rel="stylesheet"/>
+    <link href="bower_components/angular-nvd3/nvd3/build/nv.d3.css" type="text/css" rel="stylesheet"/>
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
