--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -1,5 +1,4 @@
 <div avb-busy overlay ng-if="loading && !intally"></div>
-
 <div class="dashboard">
     <h2>
       <span ng-i18next>avAdmin.sidebar.dashboard</span>
@@ -286,12 +285,21 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-md-7 no-padding-left" ng-hide="showtable" ng-repeat="q in election.results.questions">
-        <!-- grafica de datos -->
-        <nvd3 options="dataOptions" data="getTableData(q)"></nvd3>
-        <!-- grafica de participacion -->
-        <nvd3 options="participationOptions" data="getParticipationData(q)">
-        </nvd3>
+    <div ng-hide="showtable">
+        <div ng-repeat="q in election.results.questions">
+            <h2>{{ q.title }}</h2>
+            <nvd3 options="dataOptions" data="getTableData(q)"></nvd3>
+            <nvd3 options="participationOptions"
+            data="getParticipationData(q)"></nvd3>
+        </div>
     </div>
+    <!--
+    <div ng-show="showtable">
+
+    </div>
+    <div class="no-padding-left" ng-hide="showtable" ng-repeat="q in election.results.questions">
+        <nvd3 options="dataOptions" data="getTableData(q)"></nvd3>
+    </div>
+    -->
     <!-- endof results -->
 </div>
