--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -7,22 +7,22 @@
 
     <!-- dashboard status bar -->
     <div class="statusbar row text-center">
-            <div class="status-responsive" ng-class="{true:'text-success', false:'text-muted'}[index > $index]" ng-repeat="status in statuses">
-                <div class="stick" ng-class="{'stickini': $first, 'stickend': $last}">
-                    <i class="fa fa-cog fa-spin fa-sw fa-2x text-warning" ng-if="index == $index && intally"></i>
-                    <i class="fa fa-sw fa-2x fa-check-circle" ng-if="index > $index"></i>
-                    <i class="fa fa-sw fa-2x fa-circle" ng-if="index == $index && !intally"></i>
-                    <i class="fa fa-sw fa-2x fa-circle" ng-if="index < $index"></i>
-                </div>
-                <div class="small" ng-i18next ng-if="index != $index">{{ status }}</div>
-                <button ng-click="doActionConfirm($index)" class="actionbtn btn btn-success" ng-if="index == $index && nextaction">
-                    <div class="small" ng-i18next>{{ nextaction }}</div>
-                    <strong ng-i18next>avAdmin.dashboard.donow</strong>
-                </button>
-                <button class="btn btn-warning" ng-if="index == $index && intally">
-                    <div class="small" ng-i18next="avAdmin.dashboard.doingtally"></div>
-                </button>
+        <div class="status-responsive" ng-class="{true:'text-success', false:'text-muted'}[index > $index]" ng-repeat="status in statuses">
+            <div class="stick" ng-class="{'stickini': $first, 'stickend': $last}">
+                <i class="fa fa-cog fa-spin fa-sw fa-2x text-warning" ng-show="index == $index && intally"></i>
+                <i class="fa fa-sw fa-2x fa-check-circle" ng-show="index > $index"></i>
+                <i class="fa fa-sw fa-2x fa-circle" ng-show="index == $index && !intally"></i>
+                <i class="fa fa-sw fa-2x fa-circle" ng-show="index < $index"></i>
             </div>
+            <div class="small" ng-i18next ng-show="index != $index">{{ status }}</div>
+            <button ng-click="doActionConfirm($index)" class="actionbtn btn btn-success" ng-if="index == $index && nextaction">
+                <div class="small" ng-i18next>{{ nextaction }}</div>
+                <strong ng-i18next>avAdmin.dashboard.donow</strong>
+            </button>
+            <button class="btn btn-warning" ng-if="index == $index && intally">
+                <div class="small" ng-i18next="avAdmin.dashboard.doingtally"></div>
+            </button>
+        </div>
     </div>
     <!-- endof dashboard status bar -->
 
@@ -285,12 +285,12 @@
             </div>
         </div>
     </div>
-    <div ng-hide="showtable">
+    <div ng-if="!showtable">
         <div ng-repeat="q in election.results.questions track by $index">
             <h2>{{ q.title }}</h2>
             <div style="display: flex; flex-wrap: wrap">
-                <nvd3 options="dataOptions" data="getTableData(q)"></nvd3>
-                <nvd3 options="participationOptions" data="getParticipationData(q)"></nvd3>
+                <nvd3 options="dataOptions" data="chart_fns.getTableData(q)"></nvd3>
+                <nvd3 options="participationOptions" data="chart_fns.getParticipationData(q)"></nvd3>
             </div>
         </div>
     </div>
