--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- IE8 bind workaround (needed for less) -->
   <script src="/ie8-bind-workaround.js"></script>
-  
+
   <!-- JS from Bower Components -->
   <script src="bower_components/avCommon/dist/libnocompat-v3.0.1.js" class="libnocompat"></script>
   <script src="bower_components/avCommon/dist/libCommon-v3.0.1.js" class="lib"></script>
@@ -75,6 +75,8 @@
   <script src="avAdmin/admin-directives/dashboard/confirm-publish-results-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/send-auth-codes-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/send-auth-codes-modal-confirm.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/results-charts.js" class="app"></script>
+
   <script src="avAdmin/admin-directives/elbasic/elbasic.js" class="app"></script>
   <script src="avAdmin/admin-directives/elauth/elauth.js" class="app"></script>
   <script src="avAdmin/admin-directives/billinginfo/billinginfo.js" class="app"></script>
@@ -103,7 +105,7 @@
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="/ie10-viewport-bug-workaround.js"></script>
-  
+
   <!-- IE9 console workaround -->
   <script src="/ie9-console-workaround.js"></script>
   <!-- Add New Component JS Above -->
